Get a syntax error: Liquid syntax error (line 79): Unknown tag 'javascript'

--- a/fees.html
+++ b/fees.html
@@ -82,6 +82,7 @@ permalink: /fees/
 
 <p>Visa, flights, travel insurance (mandatory), criminal background check, vaccinations, travel to Chiang Rai once in Thailand (we will show you the different options you have depending on your budget), transfer from Chiang Rai at conclusion of program, in-country trips and tours, souvenirs, spending money (volunteers in Thailand generally find US$20 to be sufficient for basic weekly expenses).</p>
 
+<!--javascript can't recognised when run 'jekyll serve'-->
 {% javascript vendor/react %}
 {% javascript vendor/react-dom %}
 {% javascript fees %}
